- updated dajaxice configuration (0.5.1) - more knockout integration in experiment monitor, replacing old block replacement - adding bootbox.js for easier bootstrap-enabled confirmation dialogs

--- a/vcweb/core/templates/experimenter/base.html
+++ b/vcweb/core/templates/experimenter/base.html
@@ -8,5 +8,6 @@
 {% block title %}Virtual Commons Web Experimenter Interface{% endblock %}
 
 {% block javascript %}
-{% include "includes/jquery.confirm.html" %}
+{{ block.super }}
+<script type='text/javascript' src='{{STATIC_URL}}/js/bootbox.min.js'></script>
 {% endblock %}
