--- a/vcweb/core/templates/experimenter/monitor.html
+++ b/vcweb/core/templates/experimenter/monitor.html
@@ -5,20 +5,20 @@
 {% block page %}
 {{block.super}}
 <h3>{{experiment}}</h3>
-{% with participant_count=experiment.participant_set.count %}
 <div class='row-fluid'>
+    {% with participant_count=experiment.participant_set.count %}
     <div class='span6'>
         <ul class='nav nav-list'>
             <li class='nav-header'>experiment management</li>
             <li><a href='{% url core:dashboard %}'><i class='icon-chevron-left'></i>return to the dashboard</a></li>
             {% if experiment.is_active %}
                 {% if experiment.is_round_in_progress %}
-                    <li><a class='confirm-experiment-action' name='end_round' href='end-round' data-content='Stops the current round.'><i class='icon-stop'></i>end round</a></li>
+                    <li><a class='confirm' name='end_round' href='end-round' data-content='Stops the current round.'><i class='icon-stop'></i>end round</a></li>
                 {% else %}
-                    <li><a class='confirm-experiment-action' name='start_round' href='start-round' data-content='Starts the round.'>
+                    <li><a class='confirm' name='start_round' href='start-round' data-content='Starts the round.'>
                         <i class='icon-play'></i>start round</a></li>
                 {% endif %}
-                <li><a class='confirm-experiment-action' name='advance_to_next_round' href='advance-to-next-round' data-content='Stops the current round if necessary and advances to the next round.'><i class='icon-step-forward'></i>advance to next round</a>
+                <li><a class='confirm' name='advance_to_next_round' href='javascript:void()' data-content='Stops the current round if necessary and advances to the next round.'><i class='icon-step-forward'></i>advance to next round</a>
                 </li>
                 <li><a href='javascript:void()' id='refreshAllParticipants' data-content='Sends a page refresh to all connected participants.' ><i class='icon-refresh'></i>refresh all participants</a></li>
                 <li class='divider'></li>
@@ -32,41 +32,30 @@
                         <a href='{{experiment.controller_url}}/register-simple'>test participants</a>
                     </div>
                 {% else %}
-                    <li><a data-content='You must first activate an experiment before you can run it.' class='confirm-experiment-action' name='activate' href='activate'>
+                    <li><a data-content='You must first activate an experiment before you can run it.' class='confirm' name='activate' href='activate'>
                         <i class='icon-off'></i>activate</a>
                     </li>
                 {%endif%}
             {% endif %}
             <li class='divider'></li>
             <li class='nav-header'>round status</li>
-            <li data-bind='text:roundStatusDisplay' data-content='{{experiment.actions_help_text}}'>{{ experiment.sequence_label }}, {{experiment.get_status_display}}</li>
-            <li data-bind='text:roundTypeDisplay'>{{ experiment.current_round.get_round_type_display }}</li>
-            <li>Round started on {{ experiment.current_round_start_time }}</li>
+            <li data-bind='text:roundStatusDisplay' data-content='{{experiment.actions_help_text}}'></li>
+            <li>Experiment started on: {{ experiment.current_round_start_time|default_if_none:"Not active"}}</li>
             <li>Time remaining: <span data-bind='text:timeRemaining'>{{ experiment.time_remaining }}</span></li>
-            <li><span data-bind='text:participantCount' class='badge badge-info'>{{participant_count}}</span> registered participants</li>
-            <li><button onclick="addMessage()">Add message</button></li>
+            <li>Registered participants: <span class='badge badge-info'>{{participant_count}}</span></li>
         </ul>
     </div>
+    {% endwith %}
     <div class='span6'>
-        <h5>Activity Log</h5>
-        <div id='experiment-messages'>
-            {% for group in experiment.groups.all %}
-                {% for activity_log in group.current_round_activity_log %}
-                <div class='alert'>
-                    <button class="close" data-dismiss="alert">x</button>
-                    {{activity_log}}
-                </div>
-                {% endfor %}
-            {% empty %}
-                <div class='alert'>
-                    <button class="close" data-dismiss="alert">x</button>
-                    No activity yet.
-                </div>
-            {% endfor %}
+        <h4>Experiment messages</h4>
+        <div id='experiment-messages' class='alert' data-bind='foreach: messages'>
+            <div>
+                <button class='close' data-dismiss='alert'>&times;</button>
+                <span data-bind='text: $data'></span>
+            </div>
         </div>
     </div>
 </div>
-{% endwith %}
 <script type='text/html' id='group-round-data-template'>
     <h4 class='collapsible'>Group data</h4>
     <table>
@@ -144,46 +133,10 @@
 {% include "includes/experimenter.events.html" %}
 {% include "includes/sockjs.html" %}
 <script type='text/javascript'>
-    function registerCallbacks(round_data_count, active_round_number) {
-        $('.confirm-experiment-action').each(function() {
-            var confirmable = $(this);
-            var description = confirmable.attr("data-content");
-            var action= $(this).attr("name");
-            confirmable.click(function() {
-                confirmable.fastConfirm({
-                    questionText: description + " - continue?",
-                    onProceed: function(trigger) {
-                        Dajaxice.vcweb.core.experiment_controller(update, {'pk': {{experiment.pk}}, 'action':action});
-                        $('#experimentData').hide('fast');
-                        $('#statusSpinner').show('fast');
-                        $(trigger).fastConfirm('close');
-                    },
-                    onCancel: function(trigger) {
-                        $(trigger).fastConfirm('close');
-                    }
-                });
-                return false;
-            });
-        });
-        $('#statusSpinner').hide();
-        $('[data-content]').popover();
-        $('#experimentData').show('fast');
-        console.log("active round number: " + active_round_number);
-        if (round_data_count > 0) {
-            $('#experimentData').accordion({
-                autoHeight: false
-            });
-        }
-    }
     $(function() {
-        function addMessage() {
-            addExperimentMessage({message: "This is a message" });
-        }
-        function addExperimentMessage(json) {
-            if (json && json.message) {
-                console.debug("adding message " + json + " to experiment messages div");
-                experimentModel.messages.push(json.message);
-            }
+        function update(json) {
+            console.debug("UPDATING MODELS (NEEDS IMPLEMENTING)");
+            console.debug(json);
         }
         function ChatMessage(json) {
             var self = this;
@@ -195,12 +148,38 @@
             self.id = json.id;
         }
         function ExperimentModel() { 
-            this.chatMessages = ko.observableArray(["No chat messages to show."]);
-            this.messages = ko.observableArray([new ChatMessage({message: "No messages at this time."})]);
-            this.roundStatusDisplay = ko.observable('No round status available.');
-            this.roundTypeDisplay = ko.observable('Inactive');
-            this.timeRemaining = ko.observable('No duration specified.');
-            this.participantCount = ko.observable(0);
+            var self = this;
+            self.chatMessages = ko.observableArray([new ChatMessage({message: "No messages at this time."})]);
+            self.messages = ko.observableArray(["No messages"]);
+            self.roundStatusDisplay = ko.observable('{{ experiment.sequence_label }}, {{experiment.get_status_display}}');
+            self.timeRemaining = ko.observable('No duration specified.');
+            self.roundData = ko.observable([]);
+            self.addRoundData = function(json) {
+                self.roundData.push(new RoundData(json));
+            }
+            self.addTestMessage = function() {
+                self.messages.push("This is a test!");
+            }
+            self.addMessage = function(json) {
+                switch (json.message_type) {
+                    case 'submit':
+                    case 'info':
+                        console.debug("adding message " + json + " to experiment messages div");
+                        self.messages.push(json.message);
+                    break;
+                    case 'chat':
+                        self.chatMessages.push(new ChatMessage(json));
+                    // addChatMessage('chat-div-' + json.round_data_pk, json, json.date_created + " " + json.participant);
+                    break;
+                    case 'submit':
+                        self.messages.push(json.message);
+                    break;
+                    default:
+                        console.debug("unhandled json message: " + json);
+                    break;
+                }
+                self.messages.push(json.message);
+            }
         }
         var experimentModel = new ExperimentModel();
         ko.applyBindings(experimentModel);
@@ -208,26 +187,22 @@
         s.onmessage = function(json_string) {
             console.log("Received message: " + json_string);
             var json = jQuery.parseJSON(json_string);
-            addExperimentMessage(json);
+            experimentModel.addMessage(json);
             /*
-            switch (json.message_type) {
-                case 'submit':
-                case 'info':
-                    addExperimentMessage(json);
-
-                    break;
-                case 'chat':
-                    experimentModel.chatMessages.push(new ChatMessage(json));
-                    // addChatMessage('chat-div-' + json.round_data_pk, json, json.date_created + " " + json.participant);
-                    break;
-                case 'submit':
-                    addExperimentMessage(json);
-                    // addExperimentMessage("Participant " + json.participant_number + " (Group #" + json.participant_group + ") submit a harvest decision of " + json.message);
-                    break;
-                default:
-            }
             */
         };
+        $('a.confirm').click(function(e) {
+            e.preventDefault();
+            var self = $(this);
+            var description = self.attr("data-content");
+            var action = self.attr("name");
+            console.debug("confirming action: " + action + " with description: " + description);
+            bootbox.confirm(description + "  Continue?", function(confirmed) {
+                if (confirmed) {
+                    Dajaxice.vcweb.core.experiment_controller(update, {'pk': {{experiment.pk}}, 'action':action});
+                }
+            });
+        });
         $('#refreshAllParticipants').click(function(evt) {
             console.log("sending refresh event");
             s.send(createRefreshEvent());
@@ -238,6 +213,7 @@
             s.send(createGotoEvent());
             return false;
         });
+        $('[data-content]').popover();
     });
 </script>
 {% endblock %}
