splitting up sockjs connections into experimenter and participant connections.  still need to work out session management and mapping to allow experimenters to send messages to all connected clients within their experiment

--- a/vcweb/core/templates/experimenter/monitor.html
+++ b/vcweb/core/templates/experimenter/monitor.html
@@ -187,7 +187,7 @@
         }
         var experimentModel = new ExperimentModel();
         ko.applyBindings(experimentModel);
-        var s = connect();
+        var s = connect("/experimenter");
         s.onmessage = function(json_string) {
             console.log("Received message: " + json_string);
             var json = jQuery.parseJSON(json_string);
