--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -116,6 +116,7 @@
         <script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js'></script>
         <script type='text/javascript' src='{{STATIC_URL}}bootstrap/js/bootstrap.min.js'></script>
         <script type='text/javascript' src='{{STATIC_URL}}js/knockout.min.js'></script>
+        <script type='text/javascript' src='{{STATIC_URL}}js/knockout.mapping.min.js'></script>
         <script type='text/javascript' src='{{STATIC_URL}}js/common.js'></script>
         {% include "includes/jquery.ui.html" %}
         {% if debug_mode %}
