--- a/vcweb/core/templates/experimenter/monitor.html
+++ b/vcweb/core/templates/experimenter/monitor.html
@@ -137,65 +137,57 @@
 {% include "includes/sockjs.html" %}
 <script type='text/javascript'>
     $(function() {
-        function update(json) {
-
-            console.debug(json);
+        function update(experimentModel) {
         }
-        function ChatMessage(json) {
-            var self = this;
-            self.message = json.message;
-            self.date_created = json.date_created;
-            // participant group relationship id
-            self.pgrid = json.participant_group_relationship_id;
-            self.participant = json.participant;
-            self.id = json.id;
-        }
-        function ExperimentModel() {
-            var self = this;
-            self.chatMessages = ko.observableArray([]);
-            self.messages = ko.observableArray([]);
-            self.roundSequenceLabel = ko.observable('{{ experiment.sequence_label }}');
-            self.roundStatusLabel = ko.observable('{{ experiment.get_status_display }}');
-            self.timeRemaining = ko.observable('{{ experiment.time_remaining }}');
-            self.roundData = ko.observable([]);
-            self.addRoundData = function(json) {
-                self.roundData.push(new RoundData(json));
-            }
-            self.addMessage = function(event) {
-                self.messages.push(event.message);
-            }
-        }
-        var experimentModel = new ExperimentModel();
-        ko.applyBindings(experimentModel);
-        var s = connect("/experimenter");
-        s.onmessage = function(event) {
-            console.log("Received event: " + event);
-            experimentModel.addMessage(jQuery.parseJSON(event.data));
-        };
-        $('a.confirm').click(function(e) {
-            e.preventDefault();
-            var self = $(this);
-            var description = self.attr("data-content");
-            var action = self.attr("name");
-            console.debug("confirming action: " + action + " with description: " + description);
-            bootbox.confirm(description + "  Continue?", function(confirmed) {
-                if (confirmed) {
-                    Dajaxice.vcweb.core.experiment_controller(update, {'pk': {{experiment.pk}}, 'action':action});
+        Dajaxice.vcweb.core.get_experiment_model(function(json) {
+            var mapping = {
+                create: function(options) {
+                    var experimentModel = ko.mapping.fromJS(options.data);
+                    experimentModel.addMessage = function(evt) {
+                        experimentModel.messages.push(evt.message);
+                    };
+                    return experimentModel;
                 }
+            };
+            var experimentModel = ko.mapping.fromJS(json, mapping);
+            // var experimentModel = new ExperimentModel();
+            ko.applyBindings(experimentModel);
+            var s = connect("/experimenter");
+            s.onmessage = function(event) {
+                console.log("Received event: " + event);
+                experimentModel.addMessage(jQuery.parseJSON(event.data));
+            };
+            $('a.confirm').click(function(e) {
+                e.preventDefault();
+                var self = $(this);
+                var description = self.attr("data-content");
+                var action = self.attr("name");
+                console.debug("confirming action: " + action + " with description: " + description);
+                bootbox.confirm(description + "  Continue?", function(confirmed) {
+                    if (confirmed) {
+                        Dajaxice.vcweb.core.experiment_controller(
+                        function(data) {
+                            ko.mapping.fromJS(experimentModel, data);
+                        },
+                        {'pk': {{experiment.pk}}, 'action':action});
+                    }
+                });
             });
-        });
-        $('#refreshAllParticipants').click(function(evt) {
-            evt.preventDefault();
-            var refreshEvent = createRefreshEvent();
-            console.log("sending refresh event: " + refreshEvent);
-            getWebSocket().send(refreshEvent);
-            return false;
-        });
-        $('#transitionAllParticipants').click(function(evt) {
-            console.log("sending goto event");
-            s.send(createGotoEvent());
-            return false;
-        });
+            $('#refreshAllParticipants').click(function(evt) {
+                evt.preventDefault();
+                var refreshEvent = createRefreshEvent();
+                console.log("sending refresh event: " + refreshEvent);
+                getWebSocket().send(refreshEvent);
+                return false;
+            });
+            $('#transitionAllParticipants').click(function(evt) {
+                console.log("sending goto event");
+                s.send(createGotoEvent());
+                return false;
+            });
+
+        },
+        { 'pk': {{ experiment.pk}} });
         $('[data-content]').popover();
     });
 </script>
