--- a/vcweb/core/templates/experimenter/monitor.html
+++ b/vcweb/core/templates/experimenter/monitor.html
@@ -6,49 +6,51 @@
 {{block.super}}
 <h3>{{experiment}}</h3>
 <div class='row-fluid'>
-    {% with participant_count=experiment.participant_set.count %}
     <div class='span6'>
-        <ul class='nav nav-list'>
-            <li class='nav-header'>experiment management</li>
-            <li><a href='{% url core:dashboard %}'><i class='icon-chevron-left'></i>return to the dashboard</a></li>
-            {% if experiment.is_active %}
-                {% if experiment.is_round_in_progress %}
-                    <li><a class='confirm' name='end_round' href='end-round' data-content='Stops the current round.'><i class='icon-stop'></i>end round</a></li>
-                {% else %}
-                    <li><a class='confirm' name='start_round' href='start-round' data-content='Starts the round.'>
-                        <i class='icon-play'></i>start round</a></li>
-                {% endif %}
-                <li><a class='confirm' name='advance_to_next_round' href='javascript:void()' data-content='Stops the current round if necessary and advances to the next round.'><i class='icon-step-forward'></i>advance to next round</a>
-                </li>
+        <fieldset>
+            <legend>management</legend>
+            <ul class='nav nav-list' data-bind="if: isActive">
+                <li><a class='confirm' name='advance_to_next_round' href='javascript:void()' data-content='Stops the current round if necessary and advances to the next round.'><i class='icon-step-forward'></i>advance to next round</a></li>
+                <li data-bind="ifnot: isRoundInProgress"><a class='confirm' name='start_round' href='start-round' data-content='Starts the round.'><i class='icon-play'></i>start round</a></li>
+                <li data-bind="if: isRoundInProgress"><a class='confirm' name='end_round' href='end-round' data-content='Stops the current round.'><i class='icon-stop'></i>end round</a></li>
                 <li><a href='javascript:void()' id='refreshAllParticipants' data-content='Sends a page refresh to all connected participants.' ><i class='icon-refresh'></i>refresh all participants</a></li>
                 <li class='divider'></li>
                 <li class='nav-header'>download data</li>
                 <li><a href='download/csv'><img src='{{STATIC_URL}}images/famfamfam/page_white_text.png' style='margin: 5px 0 0 0;' alt='' />csv</a></li>
                 <li><a href='download/xls'><img src='{{STATIC_URL}}images/famfamfam/page_white_excel.png' style='margin: 5px 0 0 0;' alt=''/>xls</a><li>
-            {% else %}
-                {% if participant_count == 0 %}
+            </ul>
+            <div data-bind="ifnot: isActive">
+                <div data-bind="if: participantCount == 0">
                     <div class='alert alert-error alert-block'>
                         <i class='icon-warning-sign'></i>There are no registered participants. You can <a href='{{experiment.controller_url}}/register-email-list'>register participants by email</a> or 
                         <a href='{{experiment.controller_url}}/register-simple'>test participants</a>
                     </div>
-                {% else %}
-                    <li><a data-content='Activate an experiment after you have registered participants and are ready to run it.' class='confirm' name='activate' href='activate'>
-                        <i class='icon-off'></i>activate</a>
-                    </li>
-                {%endif%}
-            {% endif %}
-            <li class='divider'></li>
-            <li class='nav-header'>round status</li>
-            <li data-content='{{experiment.actions_help_text}}'>
-            <span data-bind='text:roundSequenceLabel'></span>, 
-            <span data-bind='text:roundStatusLabel'></span>
-            </li>
-            <li>Experiment started on: {{ experiment.current_round_start_time|default_if_none:"Not active"}}</li>
-            <li>Time remaining: <span data-bind='text:timeRemaining'>{{ experiment.time_remaining }}</span></li>
-            <li>Registered participants: <span class='badge badge-info'>{{participant_count}}</span></li>
-        </ul>
+                </div>
+                <div data-bind="ifnot: participantCount == 0">
+                    <div class='alert alert-info alert-block'>
+                        This experiment is currently inactive.  Please activate the experiment
+                        after you have registered all participants and are ready to start the experiment run. You have registered <span data-bind='text:participantCount'
+                            class='badge badge-info' data-content='{{experiment.participant_set}}'></span> participants.
+                    </div>
+                    <ul class='nav nav-list'>
+                        <li><a data-content='Activate an experiment after you have registered participants and are ready to start it.' 
+                            class='confirm' name='activate' href='activate'><i class='icon-off'></i>activate</a></li>
+                    </ul>
+                </div>
+        </fieldset>
+        <fieldset>
+            <legend>status</fieldset>
+            <ul class='nav nav-list'>
+                <li data-content='{{experiment.actions_help_text}}'>
+                <span data-bind='text:roundSequenceLabel'></span>, 
+                <span data-bind='text:roundStatusLabel'></span>
+                </li>
+                <li>Experiment started on: <span data-bind='text:currentRoundStartTime'></span></li>
+                <li>Time remaining: <span data-bind='text:timeRemaining'></span></li>
+                <li>Registered participants: <span data-bind='text:participantCount' class='badge badge-info'></span></li>
+            </ul>
+        </fieldset>
     </div>
-    {% endwith %}
     <div class='span6'>
         <h4>Experiment messages</h4>
         <div id='experiment-messages' class='alert' data-bind='foreach: messages'>
@@ -164,7 +166,7 @@
                 console.log("Received event: " + evt);
                 experimentModel.addMessage(jQuery.parseJSON(evt.data));
             };
-            $('a.confirm').click(function(evt) {
+            $('a.confirm').live("click", function(evt) {
                 evt.preventDefault();
                 var self = $(this);
                 var description = self.attr("data-content");
