--- a/vcweb/core/templates/experimenter/monitor.html
+++ b/vcweb/core/templates/experimenter/monitor.html
@@ -7,49 +7,43 @@
 <h3>{{experiment}}</h3>
 <div class='row-fluid'>
     <div class='span6'>
-        <fieldset>
-            <legend>management</legend>
-            <ul class='nav nav-list' data-bind="if: isActive">
-                <li><a class='confirm' name='advance_to_next_round' href='javascript:void()' data-content='Stops the current round if necessary and advances to the next round.'><i class='icon-step-forward'></i>advance to next round</a></li>
-                <li data-bind="ifnot: isRoundInProgress"><a class='confirm' name='start_round' href='start-round' data-content='Starts the round.'><i class='icon-play'></i>start round</a></li>
-                <li data-bind="if: isRoundInProgress"><a class='confirm' name='end_round' href='end-round' data-content='Stops the current round.'><i class='icon-stop'></i>end round</a></li>
-                <li><a href='javascript:void();' id='refreshAllParticipants' data-content='Sends a page refresh to all connected participants.' ><i class='icon-refresh'></i>refresh all participants</a></li>
-                <li class='divider'></li>
-                <li class='nav-header'>download data</li>
-                <li><a href='download/csv'><img src='{{STATIC_URL}}images/famfamfam/page_white_text.png' style='margin: 5px 0 0 0;' alt='' />csv</a></li>
-                <li><a href='download/xls'><img src='{{STATIC_URL}}images/famfamfam/page_white_excel.png' style='margin: 5px 0 0 0;' alt=''/>xls</a><li>
-            </ul>
-            <div data-bind="ifnot: isActive">
-                <div data-bind="if: participantCount == 0">
-                    <div class='alert alert-error alert-block'>
-                        <i class='icon-warning-sign'></i>There are no registered participants. You can <a href='{{experiment.controller_url}}/register-email-list'>register participants by email</a> or 
-                        <a href='{{experiment.controller_url}}/register-simple'>test participants</a>
-                    </div>
+        <ul class='nav nav-list' data-bind="if: isActive">
+            <li class='nav-header'>round management</li>
+            <li><a class='confirm' name='advance_to_next_round' href='javascript:void()' data-content='Stops the current round if necessary and advances to the next round.'><i class='icon-step-forward'></i>advance to next round</a></li>
+            <li data-bind="ifnot: isRoundInProgress"><a class='confirm' name='start_round' href='start-round' data-content='Starts the round.'><i class='icon-play'></i>start round</a></li>
+            <li data-bind="if: isRoundInProgress"><a class='confirm' name='end_round' href='end-round' data-content='Stops the current round.'><i class='icon-stop'></i>end round</a></li>
+            <li><a href='javascript:void();' id='refreshAllParticipants' data-content='Sends a page refresh to all connected participants.' ><i class='icon-refresh'></i>refresh all participants</a></li>
+            <li class='divider'></li>
+            <li class='nav-header'>download data</li>
+            <li><a href='download/csv'><img src='{{STATIC_URL}}images/famfamfam/page_white_text.png' style='margin: 5px 0 0 0;' alt='' />csv</a></li>
+            <li><a href='download/xls'><img src='{{STATIC_URL}}images/famfamfam/page_white_excel.png' style='margin: 5px 0 0 0;' alt=''/>xls</a><li>
+        </ul>
+        <div data-bind="ifnot: isActive">
+            <div data-bind="if: participantCount == 0">
+                <div class='alert alert-error alert-block'>
+                    <i class='icon-warning-sign'></i>There are no registered participants. You can <a href='{{experiment.controller_url}}/register-email-list'>register participants by email</a> or 
+                    <a href='{{experiment.controller_url}}/register-simple'>test participants</a>
                 </div>
-                <div data-bind="ifnot: participantCount == 0">
-                    <div class='alert alert-info alert-block'>
-                        This experiment is currently inactive.  Please activate the experiment
-                        after you have registered all participants and are ready to start the experiment run. You have registered <span data-bind='text:participantCount'
-                            class='badge badge-info' data-content='{{experiment.participant_set}}'></span> participants.
-                    </div>
-                    <ul class='nav nav-list'>
-                        <li><a data-content='Activate an experiment after you have registered participants and are ready to start it.' 
-                            class='confirm' name='activate' href='activate'><i class='icon-off'></i>activate</a></li>
-                    </ul>
+            </div>
+            <div data-bind="ifnot: participantCount == 0">
+                <div class='alert alert-info alert-block'>
+                    This experiment is currently inactive.  Please activate the experiment
+                    after you have registered all participants and are ready to start the experiment run. You have registered <span data-bind='text:participantCount'
+                        class='badge badge-info' data-content='{{experiment.participant_set}}'></span> participants.
                 </div>
-        </fieldset>
-        <fieldset>
-            <legend>status</fieldset>
-            <ul class='nav nav-list'>
-                <li data-content='{{experiment.actions_help_text}}'>
-                <span data-bind='text:roundSequenceLabel'></span>, 
-                <span data-bind='text:roundStatusLabel'></span>
-                </li>
-                <li>Experiment started on: <span data-bind='text:currentRoundStartTime'></span></li>
-                <li>Time remaining: <span data-bind='text:timeRemaining'></span></li>
-                <li>Registered participants: <span data-bind='text:participantCount' class='badge badge-info'></span></li>
-            </ul>
-        </fieldset>
+                <ul class='nav nav-list'>
+                    <li><a data-content='Activate an experiment after you have registered participants and are ready to start it.' 
+                        class='confirm' name='activate' href='activate'><i class='icon-off'></i>activate</a></li>
+                </ul>
+            </div>
+        </div>
+        <ul class='nav nav-list'>
+            <li class='nav-header'>round status</li>
+            <li data-content='{{experiment.actions_help_text}}'><span data-bind='text:roundSequenceLabel'></span>, <span data-bind='text:roundStatusLabel'></span></li>
+            <li>Experiment started on: <span data-bind='text:currentRoundStartTime'></span></li>
+            <li>Time remaining: <span data-bind='text:timeRemaining'></span></li>
+            <li>Registered participants: <span data-bind='text:participantCount' class='badge badge-info'></span></li>
+        </ul>
     </div>
     <div class='span6'>
         <h4>Experiment messages</h4>
@@ -139,6 +133,7 @@
 {% include "includes/experimenter.events.html" %}
 {% include "includes/sockjs.html" %}
 <script type='text/javascript'>
+    var data = $.parseJSON("{{ experiment.to_json|escapejs }}");
     $(function() {
         function ExperimentModel (experimentModelJson) {
             var self = this;
@@ -187,11 +182,11 @@
                 getWebSocket().send(createGotoEvent());
                 return false;
             });
-            console.debug(experimentModel.messages);
         }
         $('[data-content]').popover();
         // retrieve the experiment model JSON from the server and initialize ko models
-        Dajaxice.vcweb.core.get_experiment_model(initialize, { 'pk': {{ experiment.pk}} });
+        initialize(data);
+        // Dajaxice.vcweb.core.get_experiment_model(initialize, { 'pk': {{ experiment.pk}} });
     });
 </script>
 {% endblock %}
