--- a/vcweb/core/templates/experimenter/monitor.html
+++ b/vcweb/core/templates/experimenter/monitor.html
@@ -55,49 +55,6 @@
         </div>
     </div>
 </div>
-<script type='text/html' id='group-round-data-template'>
-    <h4 class='collapsible'>Group data</h4>
-    <table>
-        <thead>
-            <tr><th>Group</th><th>Parameter Name</th><th>Value</th></tr>
-        </thead>
-            <!-- FIXME: needs to be reworked for Knockout -->
-            <tbody>
-                {% for group_data_value in round_data.group_data_value_set.all %}
-                <tr>
-                    <td>
-                        <a class='dark-yellow-highlight' data-content='{{ group_data_value.group.all_participants_str }}'>
-                            {{ group_data_value.group }}
-                        </a>
-                    </td>
-                    <td>{{ group_data_value.parameter.label}}</td>
-                    <td>{{ group_data_value.value}}</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-        <div class='alert alert-info'><i class='icon-info-sign'></i>No group data for this round.</div>
-        <h4>Participant data</h4>
-        <table>
-            <thead>
-                <tr><th>Participant</th><th>Parameter name</th><th>Value</th><th>Type</th></tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>
-                        <a class='dark-yellow-highlight' data-content='{{participant_data_value.participant}}'>
-                            {{ participant_data_value.participant_number }} ({{ participant_data_value.group }})
-                        </a>
-                    sh /td>
-                    <td>{{ participant_data_value.parameter.label }}</td>
-                    <td id='participant_data_value_{{participant_data_value.pk}}'>{{ participant_data_value.value }}</td>
-                    <td>{{ participant_data_value.parameter.type }}</td>
-                </tr>
-            </tbody>
-        </table>
-        <div class='alert alert-info'><i class='icon-info-sign'></i>No participant data for this round has been collected yet.</div>
-</script>
-
 <div class='row-fluid'>
     <div class='span12' id='experiment.chats'>
         <h4>Chat messages</h4>
@@ -109,31 +66,54 @@
         </div>
     </div>
 </div>
-
-
-<div class='row-fluid'>
-    <div class='span12' id='experiment-data'>
-    <h4>Data</h4>
-    {% block data %}
-    {% for round_data in experiment.round_data_set.all reversed %}
-    <h3><a href='#' onclick='loadRoundData({{round_data.pk}})'>{{ round_data }}</a></h3>
-    <div id='round_data_{{forloop.counter}}'>
-        {% comment %}
-        FIXME: migrate to knockout and bootstrap
-        {% endcomment %}
+<div class='accordion' id='round-data-accordion' data-bind='foreach: allRoundData'>
+    <div class='accordion-group'>
+        <div class='accordion-heading'>
+            <a class='accordion-toggle' data-toggle='collapse' data-parent='#round-data-accordion' 
+                data-bind='attr: { href: "#" + roundDataId() }'>
+                <span class='label label-success' data-bind='text: roundType'></span>Round <span data-bind='text: roundNumber'></span> (click to collapse)</a>
+        </div>
+        <div data-bind='attr: { id: roundDataId }' class='accordion-body collapse in'>
+            <div class='accordion-inner'>
+                <table class='table table-striped table-bordered'>
+                    <caption>Group data</caption>
+                    <thead>
+                        <tr><th>Group</th><th>Parameter</th><th>Value</th></tr>
+                    </thead>
+                    <tbody data-bind='foreach: groupDataValues'>
+                    <tr>
+                        <td data-bind='text: group'></td>
+                        <td data-bind='text: parameter'></td>
+                        <td data-bind='text: value'></td>
+                    </tr>
+                    </tbody>
+                </table>
+                <table class='table table-striped table-bordered'>
+                    <caption>Participant data</caption>
+                    <thead>
+                        <tr><th>Participant</th><th>Parameter</th><th>Value</th></tr>
+                    </thead>
+                    <tbody data-bind='foreach: participantDataValues'>
+                    <tr>
+                        <td data-bind='text: participantLabel'></td>
+                        <td data-bind='text: parameter'></td>
+                        <td data-bind='text: value'></td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
-    {% empty %}
-    <div class='alert alert-info'><i class='icon-info-sign'></i>There is currently no round data to report.</div>
-    {% endfor %}
-    {% endblock data %}
 </div>
 {% endblock page %}
+
 {% block javascript %}
 {{ block.super }}
 {% include "includes/experimenter.events.html" %}
 {% include "includes/sockjs.html" %}
 <script type='text/javascript'>
     var initialData = $.parseJSON("{{ experiment.to_json|escapejs }}");
+    console.log("initial data: " + initialData);
     $(function() {
         function ExperimentModel (experimentModelJson) {
             var self = this;
