--- a/vcweb/core/templates/experimenter/monitor.html
+++ b/vcweb/core/templates/experimenter/monitor.html
@@ -46,7 +46,7 @@
         </ul>
     </div>
     <div class='span6'>
-        <h4>Experiment messages</h4>
+        <h4>Experiment Log</h4>
         <div id='experiment-messages' class='alert' data-bind='foreach: messages'>
             <div>
                 <button class='close' data-dismiss='alert'>&times;</button>
@@ -55,25 +55,15 @@
         </div>
     </div>
 </div>
-<div class='row-fluid'>
-    <div class='span12' id='experiment.chats'>
-        <h4>Chat messages</h4>
-        <div id='experiment-chat-messages' class='scrollable-messages alert' data-bind='foreach: chatMessages'>
-            <div>
-                <button class='close' data-dismiss='alert'>&times;</button>
-                <span data-bind='text: $data'></span>
-            </div>
-        </div>
-    </div>
-</div>
+<h3>Experiment Data</h3>
 <div class='accordion' id='round-data-accordion' data-bind='foreach: allRoundData'>
     <div class='accordion-group'>
         <div class='accordion-heading'>
             <a class='accordion-toggle' data-toggle='collapse' data-parent='#round-data-accordion' 
                 data-bind='attr: { href: "#" + roundDataId() }'>
-                <span class='label label-success' data-bind='text: roundType'></span>Round <span data-bind='text: roundNumber'></span> (click to collapse)</a>
+                <span class='label label-success' data-bind='text: roundType'></span>Round <span data-bind='text: roundNumber'></span></a>
         </div>
-        <div data-bind='attr: { id: roundDataId }' class='accordion-body collapse in'>
+        <div data-bind='attr: { id: roundDataId }' class='accordion-body collapse'>
             <div class='accordion-inner'>
                 <table class='table table-striped table-bordered'>
                     <caption>Group data</caption>
@@ -105,6 +95,20 @@
         </div>
     </div>
 </div>
+<div class='accordion' id='chat-accordion'>
+    <div class='accordion-group'>
+        <div class='accordion-heading'>
+            <a class='accordion-toggle' data-toggle='collapse' data-parent='#chat-accordion' href='#experiment-chat-messages'>Chat Messages</a>
+        </div>
+        <div id='experiment-chat-messages' class='scrollable-messages alert accordion-body collapse' data-bind='foreach: chatMessages'>
+            <div>
+                <button class='close' data-dismiss='alert'>&times;</button>
+                <span data-bind='text: $data'></span>
+            </div>
+        </div>
+    </div>
+</div>
+
 {% endblock page %}
 
 {% block javascript %}
